[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/MatchSetupScreen.gd" type="Script" id=1]
[ext_resource path="res://Themes/PrimaryTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Exports/Cars.png" type="Texture" id=3]
[ext_resource path="res://Assets/Exports/ArrowButtonUnpressedL.png" type="Texture" id=4]
[ext_resource path="res://Assets/Exports/ArrowButtonPressedL.png" type="Texture" id=5]
[ext_resource path="res://Assets/Exports/ArrowButtonUnpressedR.png" type="Texture" id=6]
[ext_resource path="res://Assets/Exports/ArrowButtonPressedR.png" type="Texture" id=7]
[ext_resource path="res://Assets/Exports/ArrowButtonDisablededL.png" type="Texture" id=8]
[ext_resource path="res://Assets/Exports/ArrowButtonDisablededR.png" type="Texture" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="MatchSetupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -72.0
margin_right = 112.0
margin_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 224.0
margin_bottom = 168.0
custom_constants/separation = 16

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 6.0
text = "Match Setings"
align = 1
valign = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 224.0
margin_bottom = 28.0
text = "Select Vehicle"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 224.0
margin_bottom = 86.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 224.0
margin_bottom = 32.0
alignment = 1

[node name="PreviousCarBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 60.0
margin_right = 92.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 5 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="CarSprites" type="Sprite" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/Control"]
unique_name_in_owner = true
texture = ExtResource( 3 )
centered = false
hframes = 6
vframes = 2

[node name="NextCarBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 164.0
margin_bottom = 32.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 7 )

[node name="CarNameLbl" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 224.0
margin_bottom = 42.0
text = "-"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 224.0
margin_bottom = 132.0
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 6.0
text = "Pick team color"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 224.0
margin_bottom = 30.0
alignment = 1

[node name="BlueCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 63.0
margin_right = 107.0
margin_bottom = 16.0
custom_colors/font_color_focus = Color( 0.333333, 0.631373, 0.72549, 1 )
custom_colors/font_color = Color( 0.156863, 0.4, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.0666667, 0.247059, 0.435294, 1 )
pressed = true
group = SubResource( 1 )
text = "Blue"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 119.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 0 )

[node name="RedCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 123.0
margin_right = 161.0
margin_bottom = 16.0
custom_colors/font_color_focus = Color( 0.929412, 0.352941, 0.243137, 1 )
custom_colors/font_color = Color( 0.807843, 0.101961, 0.101961, 1 )
custom_colors/font_color_pressed = Color( 0.596078, 0.0196078, 0.239216, 1 )
group = SubResource( 1 )
text = "Red"

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 224.0
margin_bottom = 168.0
custom_constants/separation = 8
alignment = 1

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 224.0
margin_bottom = 6.0
text = "Start"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_top = 14.0
margin_right = 224.0
margin_bottom = 20.0
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/PreviousCarBtn" to="." method="_on_PreviousCarBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/NextCarBtn" to="." method="_on_NextCarBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/BlueCheckbox" to="." method="_on_BlueCheckbox_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/RedCheckbox" to="." method="_on_RedCheckbox_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
